all responsive done

--- a/auto-loan-calculator.html
+++ b/auto-loan-calculator.html
@@ -34,7 +34,7 @@
                </div>
                <div class="auto_loan_wrapper">
                   <div class="row">
-                     <div class="col-xl-4">
+                     <div class="col-xl-4 col-lg-4">
                         <div class="auto_loan_left_box">
                            <form action="#">
                               <div class="form_input_box">
@@ -93,7 +93,7 @@
                            </form>
                         </div>
                      </div>
-                     <div class="col-xl-8">
+                     <div class="col-xl-8 col-lg-8">
                         <div class="auto_load_result_box">
                            <div class="top_info text-center">
                               <p>Your estimated monthly payments</p>
@@ -116,13 +116,13 @@
                <div class="auto_loan_table_result">
                   <div class="top_area_info">
                      <div class="row">
-                        <div class="col-xl-6">
+                        <div class="col-xl-6 col-lg-6 col-md-6">
                            <div class="date_filter">
                               <h4>Start Date</h4>
                               <input type="date" value="02/10/2021">
                            </div>
                         </div>
-                        <div class="col-xl-6">
+                        <div class="col-xl-6 col-lg-6 col-md-6">
                            <div class="date_filter_info_right">
                               <h4>Estimated Payoff Date</h4>
                               <h3>March 26,2026</h3>
