--- a/dabit-income-ratio.html
+++ b/dabit-income-ratio.html
@@ -34,7 +34,7 @@
                </div>
                <div class="deb_in_ratio_wrapper">
                   <div class="row">
-                     <div class="col-xl-4">
+                     <div class="col-xl-4 col-lg-4">
                         <div class="deb_in_ratio_left_form">
                            <form action="#">
                               <div class="form_input_box">
@@ -51,7 +51,7 @@
                            </form>
                         </div>
                      </div>
-                     <div class="col-xl-8">
+                     <div class="col-xl-8 col-lg-8">
                         <div class="deb_in_ratio_result_box">
                            <p>Debt to income ratio</p>
                            <h3>831 %</h3>
