--- a/debit-payoff-calculator.html
+++ b/debit-payoff-calculator.html
@@ -36,7 +36,7 @@
                </div>
                <div class="debit_payoff_wrapper">
                   <div class="row">
-                     <div class="col-xl-4">
+                     <div class="col-xl-4 col-lg-4">
                         <div class="debit_payoff_left_box">
                            <form action="#">
                               <div class="form_box_item">
@@ -179,7 +179,7 @@
                            </form>
                         </div>
                      </div>
-                     <div class="col-xl-8">
+                     <div class="col-xl-8 col-lg-8">
                         <div class="debit_payoff_result_box">
                            <div class="time_to_pay_debt_off">
                               <h3>Time to Pay Debt Off</h3>
