--- a/investment-calculator.html
+++ b/investment-calculator.html
@@ -35,19 +35,19 @@
                   <div class="calculator_form">
                      <div class="form_box">
                         <div class="row">
-                           <div class="col-xl-3">
+                           <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
                               <div class="form_input">
                                  <label>Starting Amount</label>
                                  <input type="text" value="$5000">
                               </div>
                            </div>
-                           <div class="col-xl-3">
+                           <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
                               <div class="form_input">
                                  <label>Additional contribution</label>
                                  <input type="text" value="$100">
                               </div>
                            </div>
-                           <div class="col-xl-3">
+                           <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
                               <div class="form_input">
                                  <label>Period</label>
                                  <select>
@@ -58,16 +58,16 @@
                                  </select>
                               </div>
                            </div>
-                           <div class="col-xl-3">
+                           <div class="col-xl-3 col-lg-7 col-md-6 col-sm-6">
                               <div class="form_input">
                                  <div class="row">
-                                    <div class="col-xl-6">
+                                    <div class="col-xl-6 col-lg-6 col-md-6">
                                        <div class="form_input">
                                           <label>Rate of Return</label>
                                           <input type="text" value="4.00%">
                                        </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <div class="col-xl-6 col-lg-6 col-md-6">
                                        <div class="form_input">
                                           <label>Years to grow</label>
                                           <input type="text" value="5">
@@ -99,7 +99,7 @@
             <div class="col-12">
                <div class="investment_calculator_result_container">
                   <div class="row align-items-center">
-                     <div class="col-xl-5">
+                     <div class="col-xl-5 col-lg-5">
                         <div class="investment_calculator_groth_overtime">
                            <div class="title">
                               <h3>Investment Growth Overtime</h3>
@@ -109,7 +109,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="col-xl-6 mx-auto">
+                     <div class="col-xl-6 col-lg-7 mx-auto">
                         <div class="balance_at_year">
                            <div class="title">
                               <h3>Investment Balance at year 2025</h3>
@@ -121,9 +121,12 @@
                               <div class="row">
                                  <div class="col-xl-6 mx-auto">
                                     <ul>
-                                       <li><span class="dot"></span> Starting ammount <span class="ammount">$10000</span></li>
-                                       <li><span class="dot dot2"></span> Total contribution <span class="ammount">$8758</span></li>
-                                       <li><span class="dot dot3"></span> Total Interest Earn <span class="ammount">$7500</span></li>
+                                       <li><span class="dot"></span> Starting ammount <span
+                                             class="ammount">$10000</span></li>
+                                       <li><span class="dot dot2"></span> Total contribution <span
+                                             class="ammount">$8758</span></li>
+                                       <li><span class="dot dot3"></span> Total Interest Earn <span
+                                             class="ammount">$7500</span></li>
                                     </ul>
                                  </div>
                               </div>
@@ -203,36 +206,13 @@
                            <td>$5204</td>
                         </tr>
                      </tbody>
-                 </table>
+                  </table>
                </div>
             </div>
          </div>
       </div>
    </section>
    <!-- end investment calculator table area  -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
    <!-- all javascript load here -->
    <script src="asset/js/vendor/jquery-3.3.1.min.js"></script>
    <script src="asset/js/bootstrap.bundle.min.js"></script>
