--- a/personal-loan-calculator.html
+++ b/personal-loan-calculator.html
@@ -35,7 +35,7 @@
                </div>
                <div class="personal_loan_wrapper">
                   <div class="row">
-                     <div class="col-xl-3">
+                     <div class="col-xxl-3 col-xl-4 col-lg-4">
                         <div class="personal_loan_left_form">
                            <form action="#">
                               <div class="form_heading">
@@ -87,7 +87,7 @@
                            </form>
                         </div>
                      </div>
-                     <div class="col-xl-9">
+                     <div class="col-xxl-9 col-xl-8 col-lg-8">
                         <div class="personal_loan_result_box">
                            <div class="credit_result_top">
                               <div class="row align-items-end">
@@ -104,13 +104,13 @@
                                  <div class="col-xl-7">
                                     <div class="credit_result_top_right">
                                        <div class="row">
-                                          <div class="col-xl-6">
+                                          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                                              <div class="item_box">
                                                 <p>Estimated Payment</p>
                                                 <h3>$ 582</h3>
                                              </div>
                                           </div>
-                                          <div class="col-xl-6">
+                                          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                                              <div class="item_box">
                                                 <p>Loan Term( in years )</p>
                                                 <h3>5</h3>
