--- a/savings-calculator.html
+++ b/savings-calculator.html
@@ -34,7 +34,7 @@
                </div>
                <div class="savings_calculator_wrapper">
                   <div class="row">
-                     <div class="col-xl-3">
+                     <div class="col-xxl-3 col-xl-4 col-lg-4">
                         <div class="savings_calculator_left">
                            <div class="info_box">
                               <p>Use our simple savings calculator to see how quickly your savings will grow.</p>
@@ -97,7 +97,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="col-xl-7 mx-auto">
+                     <div class="col-xxl-7 col-xl-8 col-lg-8 mx-auto">
                         <div class="savings_calculator_chart_area">
                            <div class="top_title text-center">
                               <h4>Your Savings Balance at the end of 2025 will be</h4>
