--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -36,7 +36,7 @@
                </div>
                <div class="compund_interst_wrapper">
                   <div class="row">
-                     <div class="col-xl-4">
+                     <div class="col-xl-4 col-lg-4">
                         <div class="compund_interst_form_area">
                            <h3>Savings Input</h3>
                            <form action="#">
@@ -104,7 +104,7 @@
                            </form>
                         </div>
                      </div>
-                     <div class="col-xl-8">
+                     <div class="col-xl-8 col-lg-8">
                         <div class="compund_interst_result_box">
                            <div class="balance_by_year">
                               <div class="top_title">
