--- a/cradit-payoff-calculator.html
+++ b/cradit-payoff-calculator.html
@@ -36,7 +36,7 @@
                </div>
                <div class="credit_cla_main_wrapper">
                   <div class="row">
-                     <div class="col-xl-4">
+                     <div class="col-xl-4 col-lg-5">
                         <div class="left_box">
                            <div class="credit_form_box">
                               <form>
@@ -66,7 +66,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="col-xl-8">
+                     <div class="col-xl-8 col-lg-7">
                         <div class="right_box">
                            <div class="credit_result_top">
                               <div class="row align-items-end">
@@ -80,16 +80,16 @@
                                        </ul>
                                     </div>
                                  </div>
-                                 <div class="col-xl-7">
+                                 <div class="col-xl-7 col-12">
                                     <div class="credit_result_top_right">
                                        <div class="row">
-                                          <div class="col-xl-6">
+                                          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                                              <div class="item_box">
                                                 <p>Monthly Payment</p>
                                                 <h3>$ 100</h3>
                                              </div>
                                           </div>
-                                          <div class="col-xl-6">
+                                          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                                              <div class="item_box">
                                                 <p>Months to Payoff</p>
                                                 <h3>16</h3>
